usage info backend implementation